Added retry logic

--- a/ServiceSource/ServiceSource.csproj
+++ b/ServiceSource/ServiceSource.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Polly" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
